fixed layout shift issue when changing project, and added color to scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,25 @@
 	background-color: black;
 }
 
+[data-color="green"] ::-webkit-scrollbar-thumb {
+  background: var(--color-green);
+  border-radius: 100vw;
+}
+
+[data-color="purple"] ::-webkit-scrollbar-thumb {
+  background: var(--color-purple);
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-track {
+  background: black;
+  border-radius: 100vw;
+  margin-block: 0.5rem;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
 
 body {
   font-family: "IBM Plex Mono", monospace;
@@ -274,12 +293,19 @@ article.block{
   }
 }
 
+.carousel-image__container{
+  aspect-ratio: 1/1;
+  /* width: 10rem; */
+  overflow: hidden;
+  display: flex;
+  
+}
+
 .carousel-image {
   object-fit: contain;
   object-position: center;
   width: 100%;
-  height: 300px;
-  aspect-ratio: 16/9;
+  height: 100%;
 }
 .carousel__content {
   display: flex;
@@ -296,6 +322,21 @@ article.block{
   font-size: xx-large;
   margin-inline: 1rem;
   cursor: pointer;
+}
+
+.project-description__container{
+  height: 5rem;
+  overflow-y: scroll;
+  /* width: 5rem; */
+  /* overflow: hidden; */
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  padding-inline: 2rem;
+}
+
+#project-description{
+  text-wrap: wrap;
 }
 
 @media screen and (min-width: 768px) {
